--- a/vagrant/6.0.7/.env
+++ b/vagrant/6.0.7/.env
@@ -1,7 +1,6 @@
-export CLUSTER_NAME="cluster_1"
-export NODE_NAME="node_1"
-export BOOTSTRAP_MEMORY_LOCK=true
-export NETWORK_HOST=0.0.0.0
-export HTTP_PORT=9200
-export DISCOVERY_ZEN_PING_UNICAST_HOSTS=
-export DISCOVERY_ZEN_MINIMUM_MASTER_NODES=1
+export ES_CLUSTER_NAME="cluster_1"
+export ES_BOOTSTRAP_MEMORY_LOCK=true
+export ES_NETWORK_HOST=0.0.0.0
+export ES_HTTP_PORT=9200
+export ES_DISCOVERY_ZEN_PING_UNICAST_HOSTS=
+export ES_DISCOVERY_ZEN_MINIMUM_MASTER_NODES=1
