--- a/vagrant/6.0.7/Vagrantfile
+++ b/vagrant/6.0.7/Vagrantfile
@@ -1,81 +1,42 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
+    config.vm.provision "file", source: "elasticsearch-6.7.0.zip.sha512", destination: "~/elasticsearch-6.7.0.zip.sha512"
+    config.vm.provision "file", source: "elasticsearch.yml", destination: "~/tmp/elasticsearch/elasticsearch.yml"
+    config.vm.provision "file", source: "jvm.options", destination: "~/tmp/elasticsearch/jvm.options"
+    config.vm.provision "file", source: "limits.conf", destination: "~/tmp/etc/security/limits.conf"
+    config.vm.provision "file", source: "sudo", destination: "~/tmp/etc/pam.d/sudo"
+    config.vm.provision "file", source: "sysctl.conf", destination: "~/tmp/etc/sysctl.conf"
+    config.vm.provision "file", source: ".env", destination: "~/.env"
+    config.vm.provision "file", source: "hosts", destination: "~/tmp/hosts"
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "ubuntu/xenial64"
+    config.vm.provision "shell", path: "provision.sh", privileged: false
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 9200, host: 9200
-  # config.vm.network "forwarded_port", guest: 9300, host: 9300
+    config.vm.define "node-1" do |a|
+        a.vm.box = "ubuntu/xenial64"
+        a.vm.network "private_network", ip: "192.168.33.10"
+        a.vm.provider "virtualbox" do |vb|
+            vb.memory = 8192
+            vb.cpus = 2
+        end
+        a.vm.provision "shell", inline: <<-SHELL
+            export ES_NODE_NAME="node-1"
+        SHELL
+    end
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.33.10"
-
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
-
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-    vb.memory = 8192
-    vb.cpus = 2
-  end
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
-  config.vm.provision "file", source: "elasticsearch-6.7.0.zip.sha512", destination: "~/elasticsearch-6.7.0.zip.sha512"
-  config.vm.provision "file", source: "elasticsearch.yml", destination: "~/elasticsearch.yml"
-  config.vm.provision "file", source: "jvm.options", destination: "~/jvm.options"
-  config.vm.provision "file", source: "limits.conf", destination: "~/limits.conf"
-  config.vm.provision "file", source: "pamd_su", destination: "~/pamd_su"
-  config.vm.provision "file", source: "sysctl.conf", destination: "~/sysctl.conf"
-  config.vm.provision "file", source: ".env", destination: "~/.env"
-
-  config.vm.provision "shell", path: "provision.sh", privileged: false
+    config.vm.define "node-2" do |a|
+        a.vm.box = "ubuntu/xenial64"
+        a.vm.network "private_network", ip: "192.168.33.20"
+        a.vm.provider "virtualbox" do |vb|
+            vb.memory = 4096
+            vb.cpus = 2
+        end
+        a.vm.provision "shell", inline: <<-SHELL
+            export ES_NODE_NAME="node-2"
+            ping -c 4 node-1
+        SHELL
+    end
 end
